--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "gittyup",
     "descriptions": "easy git deployment for node.js apps",
-    "version": "0.0.22",
+    "version": "0.1.1",
     "author": "Craig Condon <craig@crcn.com>",
     "repository": {
         "type": "git",
@@ -9,10 +9,13 @@
     },
     "main": "./lib/index.js",
     "dependencies": {
-        "structr": "*",
+        "structr": "0.1.0",
         "node-fs": "*",
-        "gumbo": "*"
+        "gumbo": "<0.2.0",
+        "celeri": "<0.3.0",
+        "yaconfig": "*"
     },
+    "bin": "./bin/gittyup",
     "os": [
         "linux",
         "darwin",
