fixed package typo

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "yaconfig": "*",
         "moment":"*"
     },
-    "bin": "./bin/gittyup",
+    "bin": {
+        "gup":"./bin/gittyup"
+    },
     "os": [
         "linux",
         "darwin",
