--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "gittyup",
     "descriptions": "easy git deployment for node.js apps",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "author": "Craig Condon <craig@crcn.com>",
     "repository": {
         "type": "git",
@@ -10,15 +10,16 @@
     "main": "./lib/index.js",
     "dependencies": {
         "structr": "0.1.0",
-        "node-fs": "*",
+        "node-fs": "0.1.0",
         "gumbo": "<0.2.0",
         "celeri": "<0.3.0",
-        "yaconfig": "*",
-        "moment":"*",
-        "beet":"*"
+        "yaconfig": "<0.1.0",
+        "moment": "1.1.1",
+        "beet": "<0.2.0",
+        "colors": "0.5.1"
     },
     "bin": {
-        "gup":"./bin/gittyup"
+        "gup": "./bin/gittyup"
     },
     "os": [
         "linux",
